Add github watch button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Time of Iftar</title>
 </head>
 <body onload="run();">
+
+    <iframe id="-app-github-button" class="github"
+        data-src="http://ghbtns.com/github-btn.html?user=markdotto&repo=github-buttons&type=watch"
+        allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
+
     <div class="main">
         <span class="label">Time of Iftar</span>
         <br>
