--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body onload="run();">
 
     <iframe id="-app-github-button" class="github"
-        data-src="http://ghbtns.com/github-btn.html?user=markdotto&repo=github-buttons&type=watch"
+        data-src="http://ghbtns.com/github-btn.html?user=mostafar&repo=iftar&type=watch"
         allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
 
     <div class="main">
