--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         data-src="http://ghbtns.com/github-btn.html?user=mostafar&repo=iftar&type=watch"
         allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
 
+
     <div id="-app-langs-container" class="langs">
+    </div>
+
+    <div class="location">
     </div>
 
     <div class="main">
