Bug fix in footer div

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="-app-langs-container" class="langs">
     </div>
 
-    <div class="location">
+    <div id="-app-location" class="location">
     </div>
 
     <div class="main">
