Implement Fajr time view, make HTML classes and IDs more organized

--- a/index.html
+++ b/index.html
@@ -14,28 +14,26 @@
 </head>
 <body onload="run();">
 
-    <iframe id="-app-github-button" class="github"
+    <iframe id="-github-button" class="github"
         data-src="http://ghbtns.com/github-btn.html?user=mostafar&repo=iftar&type=watch"
         allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
 
 
-    <div id="-app-langs-container" class="langs">
+    <div id="-langs-container">
     </div>
 
-    <div id="-app-location" class="location">
+    <div id="-location">
     </div>
 
     <div class="main">
-        <div id="-app-content" class="content">
-            <span id="-app-time-label" class="label">Time of Iftar</span>
-            <br>
-            <span class="time" id="-app-maghrib-time"></span>
-
-            <br>
-            <img class="logo" src="images/ramadan.jpg" />
-
-        </div>
-
+        <span id="-maghrib-label">Time of Iftar</span>
+        <br>
+        <span id="-maghrib-time"></span>
+        <br>
+        <span id="-fajr-label"></span>
+        <span id="-fajr-time"></span>
+        <br>
+        <img class="logo" src="images/ramadan.jpg" />
     </div>
 </body>
 </html>
